--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       </a>
     </header>
     <main>
-      <div class="search-container">
+      <div class="search-container" id="search-container">
         <input id="search-input" type="text" placeholder="The Hobbit, Harry Potter, ...">
         <button id="search-submit">Search</button>
       </div>
