--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>MMDL</title>
 
     <!-- CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/utils/golbal.css">
     <link rel="stylesheet" href="./assets/css/src/index.html/main.css">
 
@@ -27,6 +28,12 @@
         <button id="search-submit">Search</button>
       </div>
       <div id="find-container"></div>
+      <div id="film-container">
+        <div id="film-banner">
+          <img id="film-banner-img" src="https://image.tmdb.org/t/p/original/t3LicFpYHeYpwqm7L5wDpd22hL5.jpg" alt="Film banner">
+        </div>
+        <i id="film-close" class="fa-solid fa-xmark"></i>
+      </div>
     </main>
 </body>
 </html>
