--- a/public/index.html
+++ b/public/index.html
@@ -29,10 +29,27 @@
       </div>
       <div id="find-container"></div>
       <div id="film-container">
-        <div id="film-banner">
-          <img id="film-banner-img" src="https://image.tmdb.org/t/p/original/t3LicFpYHeYpwqm7L5wDpd22hL5.jpg" alt="Film banner">
-        </div>
+        <!-- <div id="film-banner">
+          <img id="film-banner-img" src="" alt="Film banner">
+        </div> -->
         <i id="film-close" class="fa-solid fa-xmark"></i>
+        <div class="film-infos">
+          <div class="film-image">
+            <img id="film-image-img" src="https://image.tmdb.org/t/p/original/wuMc08IPKEatf9rnMNXvIDxqP4W.jpg" alt="">
+          </div>
+          <div class="film-title">
+            <h3 id="film-title-text">Harry Potter and the Philosopher's Stone</h3>
+          </div>
+          <div class="film-date">
+            <span id="film-date-text">2001</span>
+          </div>
+          <div class="film-description">
+            <p id="film-description-text">Harry Potter has lived under the stairs at his aunt and uncle's house his whole life. But on his 11th birthday, he learns he's a powerful wizard—with a place waiting for him at the Hogwarts School of Witchcraft and Wizardry. As he learns to harness his newfound powers with the help of the school's kindly headmaster, Harry uncovers the truth about his parents' deaths—and about the villain who's to blame.</p>
+          </div>
+          <div class="film-action">
+            <button><i class="fa-solid fa-magnifying-glass"></i> Search</button>
+          </div>
+        </div>
       </div>
     </main>
 </body>
