--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,13 @@
             <p id="film-description-text">Harry Potter has lived under the stairs at his aunt and uncle's house his whole life. But on his 11th birthday, he learns he's a powerful wizard—with a place waiting for him at the Hogwarts School of Witchcraft and Wizardry. As he learns to harness his newfound powers with the help of the school's kindly headmaster, Harry uncovers the truth about his parents' deaths—and about the villain who's to blame.</p>
           </div>
           <div class="film-action">
-            <button><i class="fa-solid fa-magnifying-glass"></i> Search</button>
+            <button id="film-action-search"><i class="fa-solid fa-magnifying-glass"></i> Search</button>
+            <div id="film-results">
+              <div id="film-result-4k"></div>
+              <div id="film-result-2k"></div>
+              <div id="film-result-1080"></div>
+              <div id="film-result-720"></div>
+            </div>
           </div>
         </div>
       </div>
