--- a/public/index.html
+++ b/public/index.html
@@ -48,12 +48,15 @@
           </div>
           <div class="film-action">
             <button id="film-action-search"><i class="fa-solid fa-magnifying-glass"></i> Search</button>
-            <div id="film-results">
-              <div id="film-result-4k"></div>
-              <div id="film-result-2k"></div>
-              <div id="film-result-1080"></div>
-              <div id="film-result-720"></div>
-            </div>
+            <table id="film-results" style="display: none;">
+              <tr>
+                <th>Resolution</th>
+                <th>Seeds</th>
+                <th>Peers</th>
+                <th>Size</th>
+                <th></th>
+              </tr>
+            </table>
           </div>
         </div>
       </div>
