--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,10 @@
 </head>
 <body>
     <header>
-      <a href="./">
+      <a href="./downloads">
+        <i class="fa-solid fa-download"></i>
+      </a>
+      <a class="title" href="./">
         <h1>MMDL</h1>
       </a>
       <div class="search-container" id="search-container">
