--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <!-- JS -->
     <script src="./assets/js/utils/global.js"></script>
     <script defer src="./assets/js/src/index.html/search.js"></script>
+    <script defer src="./assets/js/src/index.html/trending.js"></script>
 
 </head>
 <body>
